2010-02-16  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Nikolas Zimmermann.

        SVG not rendered as background-image from data URI
        https://bugs.webkit.org/show_bug.cgi?id=33630

        * platform/mac/svg/css/background-image-svg-expected.checksum: Added.
        * platform/mac/svg/css/background-image-svg-expected.png: Added.
        * platform/qt/svg/css/background-image-svg-expected.checksum: Added.
        * platform/qt/svg/css/background-image-svg-expected.png: Added.
        * svg/css/background-image-svg.html: Added.
        * svg/css/background-image-svg-expected.txt: Added.
2010-02-16  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Nikolas Zimmermann.

        SVG not rendered as background-image from data URI
        https://bugs.webkit.org/show_bug.cgi?id=33630

        When the background image is an SVG image, and it is smaller than the area
        it is supposed to fill, we were using renderSubTreeToImage to draw it.
        That call was not going through all the drawing phases, and so the SVG itself
        would not be drawn.

        Test: svg/css/background-image-svg.html

        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::nativeImageForCurrentFrame):

Canonical link: https://commits.webkit.org/46172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54865 268f45cc-cd09-0410-ab3c-d52691b4dbfc